data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1960.wast
;; 1. **Test Description**:     - **Scenario**: Invoke a function from an imported module (`ModuleB`) that, upon returning, utilizes the `br_if` instruction with a non-zero condition to break out of a nested loop within the caller module (`ModuleA`).    - **Constraint Checked**: Validity of the label lookup and calculation for `br_if` relative to the nesting depth.    - **Relation to Control Flow**: This tests if the `br_if` properly continues the execution in `ModuleA` without corrupting its control flow stack or operand stack.

(assert_invalid
  (module 
    (import "ModuleB" "funcB" (func $imported_func))
    (func (result i32)
      (block $outer (result i32)
        (block $inner (result i32)
          (call $imported_func)
          (br_if 1 (i32.const 1))
        )
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)